# simple-secrets-public

./: .gitignore  Cargo.toml  DEV_MANUAL.md  README.md  SECURITY.md  SPECS.md  USER_MANUAL.md  ci.sh  dist.sh
lean/: Security.lean  lake-manifest.json  lakefile.toml
src/: lib.rs  main.rs
src/cli/: agent.rs  client.rs  mod.rs  pairing.rs  paths.rs  protocol.rs  sharing.rs
src/core/: entropy.rs  manager.rs  mod.rs  passphrase.rs  totp.rs
src/crypto/: mod.rs  pqc_auth.rs  vdf_kdf.rs
src/ffi/: android.rs  ios.rs
src/network/: mod.rs  pairing.rs  tor_i2p.rs  transfer.rs
src/sharing/: mod.rs  multisig.rs  shamir.rs
src/storage/: local_store.rs  mod.rs  ram_store.rs
src/ui/: clipboard.rs  editor.rs  mod.rs  network.rs  vault.rs
